--- a/index.html
+++ b/index.html
@@ -10,34 +10,105 @@
 
 <body>
     <header>
+
+        <!--Навігація-->
         <nav>
             <a href="">
-                <img src="./images/logo.svg" alt="">
+                <img src="./images/logo.svg" alt="logo">
             </a>
             <ul>
-                <li><a href="">Студія</a></li>
-                <li><a href="">Портфоліо</a></li>
-                <li><a href="">Контакти</a></li>
+                <li><a href="">Студия</a></li>
+                <li><a href="">Портфолио</a></li>
+                <li><a href="">Контакты</a></li>
             </ul>
         </nav>
 
+        <!--Контакти-->
         <ul>
             <li><a href="emailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
-
-
-        <div>
-            <section>
-                <h1>ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
-                <a href="">замовити послугу</a>
-            </section>
-        </div>
     </header>
+
     <main>
 
+        <!--Шапка-->
+        <section>
+            <h1>Эффективные решения для вашего бизнеса</h1>
+            <button type="button">Заказать услугу</button>
+        </section>
+
+        <!--Особливості-->
+        <section>
+
+            <div>
+                <h4>Внимание к деталям</h4>
+                <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            </div>
+
+            <div>
+                <h4>Пунктуальность</h4>
+                <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+            </div>
+
+            <div>
+                <h4>Планирование</h4>
+                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+            </div>
+
+            <div>
+                <h4>Современные технологии</h4>
+                <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            </div>
+
+        </section>
+
+        <!--Чим ми займаємось-->
+        <section>
+            <h2>Чем мы занимаемся</h2>
+            <img src="./images/img1.jpg" alt="desktop" width="370">
+            <img src="./images/img2.jpg" alt="phone" width="370">
+            <img src="./images/img3.jpg" alt="tab" width="370">
+        </section>
+
+        <!--Команда-->
+        <section>
+
+            <h2>Наша команда</h2>
+            <div><img src="./images/photo1.jpg" alt="Игорь Демьяненко" width="270">
+                <p>Игорь Демьяненко</p>
+                <p>Product Designer</p>
+            </div>
+            <div><img src="./images/photo2.jpg" alt="Ольга Репина" width="270">
+                <p>Ольга Репина</p>
+                <p>Frontend Developer</p>
+            </div>
+            <div><img src="./images/photo3.jpg" alt="Николай Тарасов" width="270">
+                <p>Николай Тарасов</p>
+                <p>Marketing</p>
+            </div>
+            <div><img src="./images/photo4.jpg" alt="Михаил Ермаков" width="270">
+                <p>Михаил Ермаков</p>
+                <p>UI Designer</p>
+            </div>
+
+        </section>
     </main>
+
+    <!--Підвал-->
     <footer>
+
+        <a href="">
+            <img src="./images/logo.svg" alt="logo">
+        </a>
+
+        <ul>
+            <li>
+                <p>г. Киев, пр-т Леси Украинки, 26</p>
+            </li>
+            <li><a href="emailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+        </ul>
 
     </footer>
 
