--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Homework</title>
 </head>
 
 <body>
+
+    <!--Хедер-->
     <header>
 
-        <!--Навігація-->
+        <a>
+            <p lang="en">web<span>studio</span></p>
+        </a>
+
         <nav>
-            <a href="">
-                <img src="./images/logo.svg" alt="logo">
-            </a>
             <ul>
                 <li><a href="">Студия</a></li>
                 <li><a href="">Портфолио</a></li>
@@ -32,7 +34,7 @@
 
     <main>
 
-        <!--Шапка-->
+        <!--Герой-->
         <section>
             <h1>Эффективные решения для вашего бизнеса</h1>
             <button type="button">Заказать услугу</button>
@@ -66,31 +68,37 @@
         <!--Чим ми займаємось-->
         <section>
             <h2>Чем мы занимаемся</h2>
-            <img src="./images/img1.jpg" alt="desktop" width="370">
-            <img src="./images/img2.jpg" alt="phone" width="370">
-            <img src="./images/img3.jpg" alt="tab" width="370">
+            <ul>
+                <li><img src="./images/img1.jpg" alt="компютер" width="370" height="294"></li>
+                <li><img src="./images/img2.jpg" alt="телефон" width="370" height="294"></li>
+                <li><img src="./images/img3.jpg" alt="планшет" width="370" height="294"></li>
+            </ul>
+
         </section>
 
         <!--Команда-->
         <section>
 
             <h2>Наша команда</h2>
-            <div><img src="./images/photo1.jpg" alt="Игорь Демьяненко" width="270">
-                <p>Игорь Демьяненко</p>
-                <p>Product Designer</p>
-            </div>
-            <div><img src="./images/photo2.jpg" alt="Ольга Репина" width="270">
-                <p>Ольга Репина</p>
-                <p>Frontend Developer</p>
-            </div>
-            <div><img src="./images/photo3.jpg" alt="Николай Тарасов" width="270">
-                <p>Николай Тарасов</p>
-                <p>Marketing</p>
-            </div>
-            <div><img src="./images/photo4.jpg" alt="Михаил Ермаков" width="270">
-                <p>Михаил Ермаков</p>
-                <p>UI Designer</p>
-            </div>
+            <ul>
+                <li><img src="./images/photo1.jpg" alt="Игорь Демьяненко" width="270" height="260">
+                    <p>Игорь Демьяненко</p>
+                    <p>Product Designer</p>
+                </li>
+                <li><img src="./images/photo2.jpg" alt="Ольга Репина" width="270" height="260">
+                    <p>Ольга Репина</p>
+                    <p>Frontend Developer</p>
+                </li>
+                <li><img src="./images/photo3.jpg" alt="Николай Тарасов" width="270" height="260">
+                    <p>Николай Тарасов</p>
+                    <p>Marketing</p>
+                </li>
+                <li><img src="./images/photo4.jpg" alt="Михаил Ермаков" width="270" height="260">
+                    <p>Михаил Ермаков</p>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
+
 
         </section>
     </main>
@@ -98,16 +106,17 @@
     <!--Підвал-->
     <footer>
 
-        <a href="">
-            <img src="./images/logo.svg" alt="logo">
+        <a>
+            <p lang="en">web<span>studio</span></p>
         </a>
 
+        <address>
+            г. Киев, пр-т Леси Украинки, 26
+        </address>
+
         <ul>
-            <li>
-                <p>г. Киев, пр-т Леси Украинки, 26</p>
-            </li>
             <li><a href="emailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
 
     </footer>
