--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
     <!--Хедер-->
     <header>
 
-        <a>
-            <p lang="en">web<span>studio</span></p>
-        </a>
+        <a href="./index.html">web<span>studio</span></a>
 
         <nav>
             <ul>
@@ -43,26 +41,30 @@
         <!--Особливості-->
         <section>
 
-            <div>
-                <h4>Внимание к деталям</h4>
-                <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-            </div>
+            <h2 hidden>Особенности</h2>
+            <ul>
 
-            <div>
-                <h4>Пунктуальность</h4>
-                <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-            </div>
+                <li>
+                    <h4>Внимание к деталям</h4>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
 
-            <div>
-                <h4>Планирование</h4>
-                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-            </div>
+                <li>
+                    <h4>Пунктуальность</h4>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
 
-            <div>
-                <h4>Современные технологии</h4>
-                <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-            </div>
+                <li>
+                    <h4>Планирование</h4>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
 
+                <li>
+                    <h4>Современные технологии</h4>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
+
+            </ul>
         </section>
 
         <!--Чим ми займаємось-->
@@ -82,20 +84,20 @@
             <h2>Наша команда</h2>
             <ul>
                 <li><img src="./images/photo1.jpg" alt="Игорь Демьяненко" width="270" height="260">
-                    <p>Игорь Демьяненко</p>
-                    <p>Product Designer</p>
+                    <h3>Игорь Демьяненко</h3>
+                    <p lang="en">Product Designer</p>
                 </li>
                 <li><img src="./images/photo2.jpg" alt="Ольга Репина" width="270" height="260">
-                    <p>Ольга Репина</p>
-                    <p>Frontend Developer</p>
+                    <h3>Ольга Репина</h3>
+                    <p lang="en">Frontend Developer</p>
                 </li>
                 <li><img src="./images/photo3.jpg" alt="Николай Тарасов" width="270" height="260">
-                    <p>Николай Тарасов</p>
-                    <p>Marketing</p>
+                    <h3>Николай Тарасов</h3>
+                    <p lang="en">Marketing</p>
                 </li>
                 <li><img src="./images/photo4.jpg" alt="Михаил Ермаков" width="270" height="260">
-                    <p>Михаил Ермаков</p>
-                    <p>UI Designer</p>
+                    <h3>Михаил Ермаков</h3>
+                    <p lang="en">UI Designer</p>
                 </li>
             </ul>
 
@@ -111,13 +113,15 @@
         </a>
 
         <address>
-            г. Киев, пр-т Леси Украинки, 26
-        </address>
 
-        <ul>
-            <li><a href="emailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
+
+            <ul>
+                <li>г. Киев, пр-т Леси Украинки, 26</li>
+                <li><a href="emailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
+
+        </address>
 
     </footer>
 
